// copy following code
// visit https://dbdiagram.io/d
// paste copied code into code editor to visualise database schema

Table households {
  id bigint [primary key]
  name text [not null]
  code text [not null, unique]
  created_at timestamptz [not null]
}

Table categories {
  id bigint [primary key]
  name text [not null]
  default_storage text [not null]
  pantry_days integer
  fridge_days integer
  freezer_days integer
  household_id bigint [note: 'null = public/verified; set = private to household']
  created_at timestamptz [not null]

  Note: 'unique(name) where household_id is null; unique(name, household_id) where household_id is not null'
}

Table food_types {
  id bigint [primary key]
  name text [not null]
  category_id bigint
  default_storage text
  pantry_days integer
  fridge_days integer
  freezer_days integer
  household_id bigint [note: 'null = public/verified; set = private to household']

  Note: 'unique(name) where household_id is null; unique(name, household_id) where household_id is not null'
}

Table brand_products {
  id bigint [primary key]
  brand text [not null]
  food_type_id bigint [not null]
  default_storage text
  pantry_days integer
  fridge_days integer
  freezer_days integer
  household_id bigint [note: 'null = public/verified; set = private to household']
  created_at timestamptz [not null]
  
  Note: 'unique(brand, food_type_id) where household_id is null; unique(brand, food_type_id, household_id) where household_id is not null'
}

Table users {
  id bigint [primary key]
  email text [not null, unique]
  password_hash text [not null, note: 'bcrypt hash so plaintext is never stored']
  display_name text [not null]
  profile_picture_url text
  created_at timestamptz [not null]
}

Table user_household {
  id bigint [primary key]
  user_id bigint [not null]
  household_id bigint [not null]
  role text [not null, note: "check (role in ('owner','member'))"]
  created_at timestamptz [not null]
  
  Note: 'unique (user_id, household_id), a user cant join the same household twice'
}

Table fridges {
  id bigint [primary key]
  household_id bigint [not null]
  name text [not null]
  model_type text [not null, note: "check (model_type in ('two_layered','three_layered','mini','side_by_side'))"]
  created_by bigint
  created_at timestamptz [not null]
  updated_at timestamptz [not null]
}

Table storage_sections {
  id bigint [primary key]
  household_id bigint [not null]
  fridge_id bigint
  name text [not null]
  section_type text [not null, note: "check (section_type in ('fridge','freezer','fresh_zone','pantry'))"]
  section_key text [not null]
  position integer [not null]
  has_door_space boolean [not null]
  created_at timestamptz [not null]
  updated_at timestamptz [not null]

  Note: 'unique(fridge_id, section_key) where fridge_id is not null; unique(household_id, section_key) where fridge_id is null'
}

Table items {
  id bigint [primary key]
  household_id bigint [not null]
  fridge_id bigint
  storage_section_id bigint
  name text [not null]
  brand_product_id bigint
  food_type_id bigint
  category_id bigint 
  initial_quantity numeric
  quantity numeric
  unit text
  added_date date [not null]
  expiry_date date
  expiry_is_estimated boolean [not null]
  status text [not null, note: "check (status in ('active','consumed','disposed','removed'))"]
  status_updated_at timestamptz
  consumed_at date
  disposed_at date
  removed_at date
  storage text [note: "check (storage in ('fridge','pantry','freezer', 'fridge door', 'fresh zone'))"]
  is_in_door boolean [not null]
  created_by bigint
  created_at timestamptz [not null]
  updated_at timestamptz [not null]
}

Table notifications {
  id bigint [primary key]
  user_id bigint [not null]
  item_id bigint
  type text [not null, note: "check (type in ('expiring_soon','expiring_today'))"]
  message text [not null]
  notification_date date [not null]
  read_at timestamptz
  created_at timestamptz [not null]
  
  Note: 'unique (user_id, item_id, type, notification_date), one notification per item per type per day'
}

Table recipes {
  id bigint [primary key]
  name text [not null]
  cuisine_type text [not null, note: "check (cuisine_type in ('chinese','western','japanese','korean','indian','italian','other'))"]
  calories_kcal integer [note: 'check (calories_kcal >= 0)']
  difficulty_level integer [note: 'check (difficulty_level between 1 and 5)']
  prep_time_minutes integer [note: 'check (prep_time_minutes >= 0)']
  ingredients_text text
  instructions_text text
  nutrition text
}

Table recipe_food_types {
  recipe_id bigint [not null]
  food_type_id bigint [not null]

  indexes {
    (recipe_id, food_type_id) [pk]
    food_type_id
  }
}

// Relationships for user_household
Ref: user_household.user_id > users.id // many-to-one
Ref: user_household.household_id > households.id // many-to-one

// Relationships for fridge setup
Ref: fridges.household_id > households.id // many-to-one
Ref: fridges.created_by > users.id // many-to-one
Ref: storage_sections.household_id > households.id // many-to-one
Ref: storage_sections.fridge_id > fridges.id // many-to-one, nullable for pantry

// Relationships for items
Ref: items.household_id > households.id // many-to-one
Ref: items.fridge_id > fridges.id // many-to-one
Ref: items.storage_section_id > storage_sections.id // many-to-one
Ref: items.food_type_id > food_types.id // many-to-one
Ref: items.brand_product_id > brand_products.id // many-to-one
Ref: items.created_by > users.id // many-to-one
Ref: items.category_id > categories.id // many-to-one

// Relationships for the hierarchy (auto-expiry)
Ref: food_types.category_id > categories.id // many-to-one
Ref: brand_products.food_type_id > food_types.id // many-to-one

// Relationships for notifications
Ref: notifications.user_id > users.id // many-to-one
Ref: notifications.item_id > items.id // many-to-one (nullable, cascades on delete)

// Relationships for recipe matching
Ref: recipe_food_types.recipe_id > recipes.id // many-to-one
Ref: recipe_food_types.food_type_id > food_types.id // many-to-one

// Relationship for householdid and 3 tiers
Ref: categories.household_id > households.id
Ref: food_types.household_id > households.id
Ref: brand_products.household_id > households.id
